# cpp_math_library

./: .clang-format  .gitignore  README.md
AML/: AML.h  AMLMatrix33.cpp  AMLMatrix33.h  AMLVector3.cpp  AMLVector3.h  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
test/: AMLMatrix33Test.cpp  AMLVector3Test.cpp  CMakeLists.txt
